--- a/source/GermanLearning.WebApp/appsettings.json
+++ b/source/GermanLearning.WebApp/appsettings.json
@@ -5,7 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=germanlearning.database;Port=5432;Database=germanlearning;Username=german;Password=german;Include Error Detail=true"
+  }
+  
+
   
 
 }
